--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@
     justify-content: center;
     position: absolute;
     top: 74vh;
+    cursor: poiner;
 }
 
 @media only screen and (max-width:1000px){
